--- a/components/connection/CMakeLists.txt
+++ b/components/connection/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "wifi.c" "mqtt.c"
+idf_component_register(SRCS "ble.c" "wifi.c" "mqtt.c"
                        INCLUDE_DIRS "include"
-                       REQUIRES mqtt esp_wifi nvs_flash)
+                       REQUIRES mqtt esp_wifi nvs_flash bt)
